# htmlipi

./: LICENSE  README.md  pyproject.toml
examples/gallery/: main.py  requirements.txt
examples/gallery/templates/: gallery.py
src/htmlipi/: __init__.py  renderer.py  tag.py  utils.py
