[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htmlipi"
version = "1.0.0"
authors = [
  { name="Sri Pravan Paturi", email="pravanpaturi@gmail.com" },
]
description = "A tiny Python library to create HTML templates without parsing and using native control flow"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sripravan/htmlipi"
"Bug Tracker" = "https://github.com/sripravan/htmlipi/issues"